fixed schemas & add drink parse ingredients
