# controllers/drinks.js
@@ -106,7 +106,10 @@ const getDrinkById = async (req, res) => {
 
 const addOwnDrink = async (req, res) => {
   const { _id: owner } = req.user;
+  console.log(req.body);
   const { ingredients } = req.body;
+  console.log(ingredients);
+  const parsedIngredients = JSON.parse(ingredients);
 
   let drinkThumb = "";
   if (req.file) {
@@ -115,7 +118,7 @@ const addOwnDrink = async (req, res) => {
 
   const ingredientsArr = [];
 
-  for (const ingredient of ingredients) {
+  for (const ingredient of parsedIngredients) {
     console.log(ingredient);
 
     const ingredientInfo = await Ingredient.findOne({
